# plugin_ordering

./: Cargo.toml
src/: lib.rs  release.rs  release_copy.rs
src/inner/: ordered_plugin.rs  plugin_descriptor.rs
src/inner/ordered_plugin/: app_dummy.rs  sized_label.rs
src/mocked/: app.rs  plugin.rs
src/mocks/: app.rs  mod.rs  plugin.rs
src/release/: ordered_plugin.rs
src/release/ordered_plugin/: app_dummy.rs
src/release_copy/: ordered_plugin.rs  plugin_descriptor.rs
src/tests/: tests_using_mocks.rs  tests_without_mocks.rs
