[package]
name = "plugin_ordering"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6.0", features = ["dynamic"] }
mockall_double = "0.2.1"
mockall ={ version ="0.11.0", features =["nightly"]}

[dev-dependencies]


[features]
default = []
mocked = []